# MiraPortfolio

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
app/: __main__.py
app/application/: __init__.py  bootstrap.py  commands.py  exceptions.py  queries.py  results.py  services.py  unit_of_work.py
app/application/events/: __init__.py  bus.py  dispatcher.py  handler.py  handlers.py  publisher.py  registry.py
app/application/ports/: __init__.py  repositories.py
app/core/: config.py  container.py  exceptions.py  logging.py  settings.py
app/domain/: __init__.py  asset.py  currency.py  portfolio.py  price_history.py  snapshot.py  transaction.py
app/domain/entities/: __init__.py  asset.py  portfolio.py  portfolio_metrics.py  price_history.py  snapshot.py  transaction.py
app/domain/events/: __init__.py  _validation.py  base.py  dashboard_refresh_requested.py  portfolio_updated.py  reason.py  snapshot_created.py  transaction_added.py
app/domain/exceptions/: __init__.py
app/domain/repositories/: __init__.py
app/domain/services/: __init__.py  portfolio_valuation_calculator.py  position_calculator.py
app/domain/value_objects/: __init__.py  asset_position.py  currency.py  financial.py  portfolio_valuation.py
app/infrastructure/: database.py
app/infrastructure/persistence/: __init__.py
app/repositories/: __init__.py  base.py
app/ui/components/: portfolio_valuation_panel.py  widgets.py
app/ui/dialogs/: __init__.py  (+5 more)
docs/: architecture.md  changelog.md  sprint-review.md
docs/architecture/: sprint-1.6-desktop-alpha.md
migrations/: env.py  script.py.mako
migrations/versions/: 20260718_0001_initial_persistence.py
scripts/: check_no_floats.py
tests/: test_config.py
tests/integration/: test_desktop_alpha_vertical_slice.py
(+50 files in other folders)
